vpc/security_group.tf
resource "aws_security_group" "datasource_team2" {
  name        = "nagiosxi"
  description = "Allow inbound SSH/HTTP"
  vpc_id      = "${aws_vpc.nagiosxi.id}"

  ingress {
    description = "Port SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Port HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = "${var.tags}"
}
